fix layout bug for 4k display

--- a/assets/scss/bootstrap.scss
+++ b/assets/scss/bootstrap.scss
@@ -6,3 +6,22 @@ $enable-gradients: true;
 // Bootstrap and its default variables
 @import "node_modules/bootstrap/scss/bootstrap";
 
+.j-sidebar {
+  order: 0;
+  // background-color: #f5f2f9;
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+
+  @include media-breakpoint-up(md) {
+    @supports (position: sticky) {
+      position: sticky;
+      top: 0px;
+      z-index: 1000;
+      height: 100vh;
+    }
+    border-right: 1px solid rgba(0, 0, 0, .1);
+  }
+
+  @include media-breakpoint-up(xl) {
+    flex: 0 1 320px;
+  }
+}
